# V-See-Windows

./: .cursorrules  .gitignore  ARCHITECTURE.md  LICENSE  README.md  package.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALL-TEST.md  PRE-FLIGHT-CHECKLIST.md  REQUIREMENTS.md  TODO.md  USER-GUIDE.md
scripts/: generate-icons.cjs  run-dev.bat  run-dev.ps1
src/: help.html  index.html  main.js  viewer.html  viewer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: audio.rs  debug_log.rs  fs.rs  help.rs  mod.rs  persistence.rs  video_thumb.rs  viewer.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: FolderTree.js  PlayableList.js  ThumbnailGrid.js
src/scripts/: debug.js  splitters.js
src/styles/: main.css
