[package]
name = "v-see-windows"
version = "0.1.0"
description = "V-See Windows - High-performance desktop photo viewer"
authors = ["Viorel LUPU"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.18"
base64 = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
